<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <TableLayout
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:text="@string/c_title"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/b_title"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/s_title"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/p_title"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:text="@string/c1"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/b1"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/s1"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/p1"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:text="@string/c2"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/b2"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/s2"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/p2"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:text="@string/c3"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/b3"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/s3"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/p3"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow tools:ignore="UselessParent">
            <TextView
                android:text="@string/c4"
                android:layout_weight="2"/>
            <TextView
                android:text="@string/b4"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/s4"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/p4"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
    <TextView
        android:text="@string/invest"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_amount"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/btn_calculate"
        android:text="@string/calculate"
        android:onClick="calculateMaxProfit"
        android:layout_marginVertical="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_max_profit"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>